--- a/css/style.css
+++ b/css/style.css
@@ -5,3 +5,9 @@ body{
 header > h1{
     font-family: 'Contrail One';
 }
+.nav li {
+    display: inline-block;
+    font-size: 20px;
+    padding: 20px; 
+    text-align: center;
+}
