--- a/css/style.css
+++ b/css/style.css
@@ -7,4 +7,15 @@ body{
     padding: 20px; 
     text-align: center;
 }
+.column{
+    float: left;
+    width: 50%;
+    padding: 10px;
 
+}
+.greet{
+    text-align: center;
+}
+footer{
+    background-color:#b7945f;
+}
