--- a/css/style.css
+++ b/css/style.css
@@ -18,4 +18,69 @@ body{
 }
 footer{
     background-color:#b7945f;
+    width: 100%;
+    min-height: 50px;
+    text-align: center;
+   
+}
+#test{
+   font-style: italic;
+   
+}
+#test1{
+    text-align: center;
+}
+.contact input[type="text"], .contact input[type="email"], .contact select, .contact textarea {
+    display: block;
+    width: 100%;
+    margin-bottom: 22px;
+    padding: 12px 20px;
+    outline: none;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 27px;
+    color: #777;
+    background-color: transparent;
+    text-transform: capitalize;
+    background-image: none;
+    border-radius: 5px;
+    letter-spacing: 1px;
+    -webkit-appearance: none;
+    transition: .3s ease-in-out;
+    border: 1px solid #ccc;
+}
+.contact textarea {
+    height: 120px;
+}
+.contact button.btn {
+    background: #353c4e;
+    font-size: 15px;
+    display: inline-block;
+    color: #fff;
+    border: 2px solid;
+    padding: 12px 30px;
+    letter-spacing: 2px;
+    margin-top: 0px;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+    cursor: pointer;
+}
+.contact input[type="submit"]:hover {
+    color: #fff;
+    background: #00bbd1;
+border: 2px solid #00bbd1;
+}
+.contact p {
+    margin: 0;
+    font-size: 16px;
+    line-height: 30px;
+    margin-bottom: 2em;
+    color: #555;
+    letter-spacing: .5px;
+}
+#contact1{
+    text-align: center;
 }
